--- a/src/App/Common/components/Items/styles.css
+++ b/src/App/Common/components/Items/styles.css
@@ -6,6 +6,13 @@
   font-family: sans-serif;
   font-size: 12px;
   flex-grow: 1;
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none;
+}
+
+.items-container ::-webkit-scrollbar {
+  width: 0 !important;
+  display: none;
 }
 
 .item-container {
@@ -17,7 +24,7 @@
   border-radius: 10px;
   overflow: hidden;
   margin: 5px;
-  margin-top:0px;
+  margin-top: 0px;
   padding-left: 10px;
 }
 
@@ -58,7 +65,7 @@
 .empty-text {
   display: flex;
   justify-content: center;
-  color:#666;
+  color: #666;
   text-align: center;
   padding-bottom: 10px;
 }
@@ -68,5 +75,5 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  flex:1;
+  flex: 1;
 }
